# mimic

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  health-recovery-2026-07-15.md  release-readiness-2026-07-15.md
docs/adr/: ADR-0001-portable-windows-release.md  ADR-0002-pinned-toolchain-and-dependencies.md  ADR-0003-scriptable-diagnostics.md  ADR-0004-evidence-and-privacy-boundaries.md  README.md
docs/release/: runbook.md
docs/research/: 2026-07-15-release-readiness.md  2026-07-15-runtime-stack-recovery.md
docs/tasks/: README.md  TASK-001-foundations.md  TASK-002-diagnostics.md  TASK-003-release-engineering.md  TASK-004-product-proof.md  TASK-005-external-release-gates.md
scripts/: msvc-environment.ps1  package.ps1  release-gate.ps1  verify-audit.ps1  verify-package.ps1
src/: compositor.rs  config.rs  decoder.rs  diagnostics.rs  doctor.rs  gui.rs  lib.rs  main.rs  setup.rs  webcam.rs
