[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
virtualcam = "0.1.1"
ureq = { version = "2.9", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Registry"] }
dirs-next = "2.0"
