[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
virtualcam = "0.1.1"
ureq = { version = "2.9", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
sha2 = "0.10"
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Registry", "Win32_Storage_FileSystem"] }
dirs-next = "2.0"
